--- a/website/content/docs/platform/mssql/upgrading.mdx
+++ b/website/content/docs/platform/mssql/upgrading.mdx
@@ -6,9 +6,6 @@ description: Upgrade steps for the Vault EKM Provider for Microsoft SQL Server.
 
 # Upgrading the Vault EKM Provider
 
--> **Note:** If you get a "Files in Use" prompt while running the installer, select
-    "Do not close applications. A reboot will be required".
-
 ~> **Note:** The upgrade process will put the database into maintenance mode and
     require a restart. It is highly recommended to test this procedure in a
     staging environment prior to running it on a production database.
@@ -20,9 +17,11 @@ description: Upgrade steps for the Vault EKM Provider for Microsoft SQL Server.
     SELECT * FROM sys.cryptographic_providers;
     ```
 
-1. Restart the Microsoft SQL Server service.
 1. Install the latest version from [releases.hashicorp.com][releases], following
    the instructions in the installer.
+  1. If you get a "Files in Use" prompt while running the installer, select
+    "Do not close applications. A reboot will be required", and restart
+    after the installation has completed.
 1. Reload the provider DLL:
 
     ```sql
@@ -38,6 +37,6 @@ description: Upgrade steps for the Vault EKM Provider for Microsoft SQL Server.
     SELECT * FROM sys.cryptographic_providers;
     ```
 
-1. Finally, restart the Microsoft SQL Server service.
+1. Finally, restart Microsoft SQL Server.
 
 [releases]: https://releases.hashicorp.com/vault-mssql-ekm-provider/
