Add links and update default config location

--- a/website/content/docs/platform/mssql/configuration.mdx
+++ b/website/content/docs/platform/mssql/configuration.mdx
@@ -6,12 +6,12 @@ description: Configuration options for the Vault EKM Provider for Microsoft SQL 
 
 # Configuring the Vault EKM Provider
 
-Configuration is stored in a `config.json` file in the installation folder. This
-defaults to `C:\Program Files\HashiCorp\Transit Vault EKM Provider\`.
+Configuration is stored in a `config.json` file under ProgramData in a path that
+mirrors the installation folder. This defaults to
+`C:\ProgramData\HashiCorp\Transit Vault EKM Provider\config.json`.
 
--> **Note:** If the Vault EKM Provider has already been installed, the Microsoft
-    SQL Server service needs to be restarted for configuration changes to take
-    effect.
+-> **Note:** If the Vault EKM Provider has already been installed, Microsoft
+    SQL Server needs to be restarted for configuration changes to take effect.
 
 The following options are supported:
 
