--- a/website/content/docs/platform/mssql/index.mdx
+++ b/website/content/docs/platform/mssql/index.mdx
@@ -20,8 +20,8 @@ Keys (KEK) managed by Vault's [Transit][transit] secret engine using SQL Server'
 [transit]: https://www.vaultproject.io/docs/secrets/transit
 
 
-See [installation](/docs/platform/mssql/installation) for help getting started
-with the Vault EKM provider for SQL Server.
+See [installation](/docs/platform/mssql/installation) and [configuration](/docs/platform/mssql/configuration)
+for help getting started with the Vault EKM provider for SQL Server.
 
 ## Features
 
