--- a/website/content/docs/secrets/pki/considerations.mdx
+++ b/website/content/docs/secrets/pki/considerations.mdx
@@ -91,7 +91,7 @@ generation involves finding suitable random primes, whereas Ed25519 keys can
 be random data. As the number of bits goes up (RSA 2048 -> 4096 or ECDSA
 P-256 -> P-521), signature times also increases.
 
-This matters both in both directions: not only is issuance more expensive,
+This matters in both directions: not only is issuance more expensive,
 but validation of the corresponding signature (in say, TLS handshakes) will
 also be more expensive. Careful consideration of both issuer and issued key
 types can have meaningful impacts on performance of not only Vault, but
