--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -2791,7 +2791,7 @@ $ curl \
 
 ## Cluster Scalability
 
-See [PKI Cluster Scalability](/docs/secrets/pki/considerations#cluster-scalability)
+See [PKI Cluster Scalability](/docs/secrets/pki/considerations#cluster-scalability) in the considerations page.
 
 ## Managed Keys
 
