--- a/website/content/docs/secrets/pki/considerations.mdx
+++ b/website/content/docs/secrets/pki/considerations.mdx
@@ -14,13 +14,14 @@ generating the CA to use with this secrets engine.
 ## Table of Contents
 
  - [Be Careful with Root CAs](#be-careful-with-root-cas)
- - [Managed Keys](#managed-keys)
+   - [Managed Keys](#managed-keys)
  - [One CA Certificate, One Secrets Engine](#one-ca-certificate-one-secrets-engine)
- - [Always Configure a Default Issuer](#always-configure-a-default-issuer)
+   - [Always Configure a Default Issuer](#always-configure-a-default-issuer)
+   - [Key Types Matter](#key-types-matter)
  - [Use a CA Hierarchy](#use-a-ca-hierarchy)
  - [Keep certificate lifetimes short, for CRL's sake](#keep-certificate-lifetimes-short-for-crls-sake)
- - [NotAfter Behavior on Leaf Certificates](#notafter-behavior-on-leaf-certificates)
- - [Cluster Performance and Quantity of Leaf Certificates](#cluster-performance-and-quantity-of-leaf-certificates)
+   - [NotAfter Behavior on Leaf Certificates](#notafter-behavior-on-leaf-certificates)
+   - [Cluster Performance and Quantity of Leaf Certificates](#cluster-performance-and-quantity-of-leaf-certificates)
  - [You must configure issuing/CRL/OCSP information _in advance_](#you-must-configure-issuingcrlocsp-information-_in-advance_)
  - [Automate Leaf Certificate Renewal](#automate-leaf-certificate-renewal)
  - [Safe Minimums](#safe-minimums)
@@ -50,7 +51,7 @@ If you plan on using intermediate CAs with Vault, it is suggested that you let
 Vault create CSRs and do not export the private key, then sign those with your
 root CA (which may be a second mount of the `pki` secrets engine).
 
-## Managed Keys
+### Managed Keys
 
 Since 1.10, Vault Enterprise can access private key material in a
 [_managed key_](../enterprise/managed-keys).  In this case, Vault never sees the
