rephrase api doc endpoint value

--- a/website/content/api-docs/auth/gcp.mdx
+++ b/website/content/api-docs/auth/gcp.mdx
@@ -78,8 +78,8 @@ to confirm signed JWTs passed in during login.
   - `crm` - Replaces the service endpoint used in API requests to `https://cloudresourcemanager.googleapis.com`.
   - `compute` - Replaces the service endpoint used in API requests to `https://compute.googleapis.com`.
 
-  The value provided for a given key generally take the form of `scheme://host:port`. The
-  `scheme://` and `:port` portions are optional and may be omitted.
+  The endpoint value provided for a given key has the form of `scheme://host:port`.
+  The `scheme://` and `:port` portions of the endpoint value are optional.
 
 ### Sample Payload
 
