--- a/website/content/docs/deprecation/faq.mdx
+++ b/website/content/docs/deprecation/faq.mdx
@@ -40,10 +40,21 @@ These features were deprecated in prior releases of Vault. We are targeting the 
 ### Q: What is the impact of removing support for X.509 certificates with signatures that use SHA-1?
 
 Starting with Vault 1.12.0, Vault will be built with Go 1.18.
-The Go 1.18 standard library [rejects X.509 certificates](https://tip.golang.org/doc/go1.18#sha1) whose signatures use a SHA-1 hash.
+The Go 1.18 standard library X.509 signature validation [rejects signatures](https://go.dev/doc/go1.18#sha1) that use a SHA-1 hash.
 
 If this issue impacts your usage of Vault, you can temporarily work around it by deploying Vault with the environment variable `GODEBUG=x509sha1=1` set.
 This workaround will fail in a future version of Go, however, the Go team has not said when they will remove this workaround.
+
+If you want to check if your certificate or CA contains a problematic signature, you can use the OpenSSL CLI:
+
+```shell-session
+$ openssl x509 -text -noout -in somecert.pem | grep sha1
+
+    Signature Algorithm: sha1WithRSAEncryption
+    Signature Algorithm: sha1WithRSAEncryption
+```
+
+Any signature algorithms that contain `sha1` will be potentially problematic.
 
 Here are the use cases that may still use certificates with SHA-1:
 
@@ -70,7 +81,6 @@ Here are the use cases that may still use certificates with SHA-1:
 
 - [Active Directory Secrets Engine](/docs/secrets/ad)
 - [Consul Secrets Engine](/docs/secrets/consul)
-- [KMIP Secrets Engine](/docs/secrets/kmip)
 - [Kubernetes Secrets Engine](/docs/secrets/kubernetes)
 - [Nomad Secrets Engine](/docs/secrets/nomad)
 - [OpenLDAP Secrets Engine](/docs/secrets/openldap)
