Elaborate more on the bounds of the 'ttl' and 'num_uses' field.
Specify in both the api-docs and the CLI the limits of the fields.
Specify that the role's configuration is still the leading factor.

--- a/website/content/api-docs/auth/approle.mdx
+++ b/website/content/api-docs/auth/approle.mdx
@@ -69,11 +69,11 @@ enabled while creating or updating a role.
 - `secret_id_num_uses` `(integer: 0)` - Number of times any particular SecretID
   can be used to fetch a token from this AppRole, after which the SecretID by default
   will expire. A value of zero will allow unlimited uses.
-  Can be overriden by `num_uses` request field when generating a SecretID.
+  Can be overriden by `num_uses` request field when generating a SecretID, but is still the highest possible num_uses.
 - `secret_id_ttl` `(string: "")` - Duration in either an integer number of
   seconds (`3600`) or an integer time unit (`60m`) after which by default any SecretID
   expires.
-  Can be overriden by `ttl` request field when generating a SecretID.
+  Can be overriden by `ttl` request field when generating a SecretID, but is still the shortest possible ttl.
 - `local_secret_ids` `(bool: false)` - If set, the secret IDs generated
   using this role will be cluster local. This can only be set during role
   creation and once set, it can't be reset later.
@@ -277,9 +277,11 @@ itself, and also to delete the SecretID from the AppRole.
 - `num_uses` `(integer: 0)` - Number of times this SecretID can be used, after which
   the SecretID expires. A value of zero will allow unlimited uses.
   Overrides secret_id_num_uses role option when supplied.
+  May not be higher than role's secret_id_num_uses.
 - `ttl` `(string: "")` - Duration in seconds (`3600`) or an integer time unit (`60m`)
   after which this SecretID expires. Defaults to 0, meaning no expiration.
   Overrides secret_id_ttl role option when supplied.
+  May not be shorter than role's secret_id_ttl.
 
 ### Sample Payload
 
@@ -515,9 +517,11 @@ Assigns a "custom" SecretID against an existing AppRole. This is used in the
 - `num_uses` `(integer: 0)` - Number of times this SecretID can be used, after which
   the SecretID expires. A value of zero will allow unlimited uses.
   Overrides secret_id_num_uses role option when supplied.
+  May not be higher than role's secret_id_num_uses.
 - `ttl` `(string: "")` - Duration in seconds (`3600`) or an integer time unit (`60m`)
   after which this SecretID expires. Defaults to 0, meaning no expiration.
   Overrides secret_id_ttl role option when supplied.
+  May not be shorter than role's secret_id_ttl.
 
 ### Sample Payload
 
