--- a/website/content/docs/enterprise/automated-upgrades.mdx
+++ b/website/content/docs/enterprise/automated-upgrades.mdx
@@ -10,7 +10,7 @@ description: |-
 ~> **Note**: Automated Upgrades requires [Vault Enterprise](https://www.hashicorp.com/products/vault/) to be 
 configured to use Integrated Storage.
 
-Vault Enterprise Automated Upgrades allows operators to upgrade the version of Vault running in
+Vault Enterprise Automated Upgrades allows operators to upgrade the Vault version currently running in a cluster automatically. 
 a cluster in an automated fashion. There are a few different ways to make this upgrade happen,
 and control which versions are being upgraded to. By default, with no additional configuration,
 Vault will check the version of Vault that each node in the cluster is running. If a blue/green
