--- a/website/content/docs/enterprise/automated-upgrades.mdx
+++ b/website/content/docs/enterprise/automated-upgrades.mdx
@@ -14,7 +14,7 @@ Vault Enterprise Automated Upgrades allows operators to upgrade the Vault versio
  There are a few different ways to make this upgrade happen,
 and control which versions are being upgraded to. With no additional configuration,
 Vault will check the version of Vault that each node in the cluster is running. If a blue/green
-style deploy is desired, Vault can be made to use a version of your choosing, regardless of
+style deployment is desired, Vault uses the version of your choosing, regardless of
 what version of Vault is currently running.
 
 ## Configuration
