--- a/website/content/docs/enterprise/automated-upgrades.mdx
+++ b/website/content/docs/enterprise/automated-upgrades.mdx
@@ -15,7 +15,7 @@ Vault Enterprise Automated Upgrades allows operators to upgrade the Vault versio
 and control which versions are being upgraded to. With no additional configuration,
 Vault will check the version of Vault that each node in the cluster is running. If a blue/green
 style deployment is desired, Vault uses the version of your choosing, regardless of
-what version of Vault is currently running.
+which version of Vault is currently running.
 
 ## Configuration
 A new key can be added to Vault's `storage` configuration stanza: `autopilot_upgrade_version`.
