--- a/website/content/docs/enterprise/automated-upgrades.mdx
+++ b/website/content/docs/enterprise/automated-upgrades.mdx
@@ -20,7 +20,7 @@ which version of Vault is currently running.
 ## Configuration
 A new key can be added to Vault's `storage` configuration stanza: `autopilot_upgrade_version`.
 The value for this key is a [SemVer](https://semver.org/) compatible version string of your choosing.
-If this is present, it will override the actual version of Vault that is running for the purposes of
+When a version string is present, it will override the current version of Vault that is running to upgrade automatically.
 automated upgrades.
 
 ## Mechanics
