--- a/website/content/docs/enterprise/automated-upgrades.mdx
+++ b/website/content/docs/enterprise/automated-upgrades.mdx
@@ -23,7 +23,7 @@ The value for this key is a [SemVer](https://semver.org/) compatible version str
 When a version string is present, it will override the current version of Vault that is running to upgrade automatically.
 
 ## Mechanics
-Regardless of whether you choose to use Vault's built-in version, or a version of your choosing, the
+Whether you choose to use Vault's built-in version, or a version of your own, the
 mechanics for performing an automated upgrade are the same. Once you have a Vault cluster running,
 start and join a number of new nodes to the cluster, running the updated version. Once the number of
 nodes running the new version equals or exceeds the number of nodes running the old version, the
