--- a/website/content/docs/enterprise/automated-upgrades.mdx
+++ b/website/content/docs/enterprise/automated-upgrades.mdx
@@ -39,7 +39,7 @@ The status of the automated upgrade can be monitored by consulting the [Autopilo
 
 ## Examples
 ### Using Vault's built-in version
-This is the easiest to perform an automated upgrade. No configuration is needed. Automated upgrades
+This is the easiest method to perform an automated upgrade; no configuration is needed, and automated upgrades
 are enabled by default. Following the procedure outlined above in the [Mechanics](#mechanics) section
 is enough to make this happen.
 
