--- a/website/content/docs/commands/server.mdx
+++ b/website/content/docs/commands/server.mdx
@@ -76,6 +76,10 @@ flags](/docs/commands) included on all commands.
 
   _Note:_ The token ID should not start with the `s.` prefix.
 
+- `-dev-quickstart` `(bool: false)` - Configure the development server to include
+  a suite of preconfigured options, including an Identity Entity, App Role authentication,
+  a sample secret and sample polices.
+
 - `-dev-no-store-token` `(string: "")` - Do not persist the dev root token to
   the token helper (usually the local filesystem) for use in future requests.
   The token will only be displayed in the command output.
