--- a/website/content/docs/concepts/dev-server.mdx
+++ b/website/content/docs/concepts/dev-server.mdx
@@ -54,3 +54,25 @@ If you're new to Vault, you may want to pick up with [Your First Secret](/intro/
 
 In addition to experimentation, the dev server is very easy to automate
 for development environments.
+
+
+## Quickstart Option
+
+If you initiate a "dev" server with the flag `-dev-quickstart`
+(e.g. `vault server -dev -dev-quickstart`) a suite of options are enabled to explore
+a configured Vault server.
+- **Identity System** - The server will be automatically initialized
+  with an identity entity and an associated Userpass authentication method for
+  exploring the identity system. The entity has a policy associated with it to enable
+  reading, writing and deleting secrets.
+- **App Role Authentication** - The server will be automatically initialized
+  with an App Role authentication method for exploring a common method to
+  authenticate applications.
+- **Sample Secret** - The server will be automatically initialized
+  with a secret stored in the KV secret engine.
+- **Sample Policies** - The server will be automatically initialized
+  with a collection of sample policies to give access to the
+  aforementioned authentication mechanisms.
+
+More information can be found in the banner found on the CLI when the flag is toggled.
+
