--- a/website/content/docs/enterprise/fips/fips1402.mdx
+++ b/website/content/docs/enterprise/fips/fips1402.mdx
@@ -178,7 +178,7 @@ The following algorithms were certified as part of this release:
 [Leidos Compliance Letter (V Entr v1.10.0+entrfips) for FIPS Inside]([https://csrc.nist.gov/Projects/Cryptographic-Module-Validation-Program/Certificate/3678](https://www.datocms-assets.com/2885/1653327036-boringcrypto_compliance_letter_signed.pdf) using the Boring Crypto Libraries
 
 What is the difference between Seal Wrap FIPS 140 compliance and the new FIPS Inside compliance?
-- Only the storage of sensitive entries (seal wrapped entries) is actually covered by FIPS crypto.
+- Only the storage of sensitive entries (seal wrapped entries) is covered by FIPS-validated crypto when using Seal Wrapping.
 - The TLS connection to Vault is not covered (it is in 1, 2, 7, and 13 in the updated letter).
 - The generation of key material (such as PKI certs -- 8 in the updated letter -- or SSH module -- 10 in the updated letter -- and others)  wasn't using FIPS-validated crypto in the seal-wrap version.
 - With Seal wrapping, some entries were protected with FIPS crypto, but all crypto in Vault wasn't FIPS certified. With FIPS 140-2 inside, by default (if the algorithm is certified), Vault will be using the certified crypto.
