--- a/website/content/docs/deprecation/faq.mdx
+++ b/website/content/docs/deprecation/faq.mdx
@@ -45,7 +45,7 @@ The Go 1.18 standard library X.509 signature validation [rejects signatures](htt
 If this issue impacts your usage of Vault, you can temporarily work around it by deploying Vault with the environment variable `GODEBUG=x509sha1=1` set.
 This workaround will fail in a future version of Go, however, the Go team has not said when they will remove this workaround.
 
-If you want to check if your certificate or CA contains a problematic signature, you can use the OpenSSL CLI:
+If you want to check whether a certificate or CA contains a problematic signature, you can use the OpenSSL CLI:
 
 ```shell-session
 $ openssl x509 -text -noout -in somecert.pem | grep sha1
