--- a/website/content/docs/concepts/dev-server.mdx
+++ b/website/content/docs/concepts/dev-server.mdx
@@ -62,7 +62,7 @@ If you initiate a "dev" server with the flag `-dev-quickstart`
 (e.g. `vault server -dev -dev-quickstart`) a suite of options are enabled to explore
 a configured Vault server.
 - **Identity System** - The server will be automatically initialized
-  with an identity entity and an associated Userpass authentication method for
+  with an identity entity and an associated `userpass` authentication method for
   exploring the identity system. The entity has a policy associated with it to enable
   reading, writing and deleting secrets.
 - **App Role Authentication** - The server will be automatically initialized
