--- a/website/content/docs/concepts/dev-server.mdx
+++ b/website/content/docs/concepts/dev-server.mdx
@@ -65,8 +65,8 @@ a configured Vault server.
   with an identity entity and an associated `userpass` authentication method for
   exploring the identity system. The entity has a policy associated with it to enable
   reading, writing and deleting secrets.
-- **App Role Authentication** - The server will be automatically initialized
-  with an App Role authentication method for exploring a common method to
+- **AppRole Authentication** - The server will be automatically initialized
+  with an `approle` authentication method for exploring a common method to
   authenticate applications.
 - **Sample Secret** - The server will be automatically initialized
   with a secret stored in the KV secret engine.
