--- a/website/content/docs/concepts/dev-server.mdx
+++ b/website/content/docs/concepts/dev-server.mdx
@@ -69,7 +69,7 @@ a configured Vault server.
   with an `approle` authentication method for exploring a common method to
   authenticate applications.
 - **Sample Secret** - The server will be automatically initialized
-  with a secret stored in the KV secret engine.
+  with a secret stored in the KVv2 secrets engine.
 - **Sample Policies** - The server will be automatically initialized
   with a collection of sample policies to give access to the
   aforementioned authentication mechanisms.
