a few more things

--- a/website/content/api-docs/system/ha-status.mdx
+++ b/website/content/api-docs/system/ha-status.mdx
@@ -63,4 +63,4 @@ $ curl \
   ]
 }
 ```
-Note that in the above sample response, `upgrade_version` and `redundancy_zone` are Enterprise only fields.
+Note that in the above sample response, `upgrade_version` and `redundancy_zone` are Enterprise-only fields.
