--- a/website/content/api-docs/system/storage/raftautopilot.mdx
+++ b/website/content/api-docs/system/storage/raftautopilot.mdx
@@ -224,7 +224,7 @@ This endpoint is used to modify the configuration of the autopilot subsystem of 
   be in a stable, healthy state before it can be added to the cluster.
 
 - `disable_upgrade_migration` `(bool: false)` - Disables automatically upgrading Vault using
-  autopilot. (Enterprise only)
+  autopilot. (Enterprise-only)
 
 ### Sample Request
 
