--- a/website/content/docs/what-is-vault.mdx
+++ b/website/content/docs/what-is-vault.mdx
@@ -11,31 +11,34 @@ description: >-
 
 HashiCorp Vault is an identity-based secrets and encryption management system. A _secret_ is anything that you want to tightly control access to, such as API encryption keys, passwords, and certificates. Vault provides encryption services that are gated by authentication and authorization methods. Using Vault’s UI, CLI, or HTTP API, access to secrets and other sensitive data can be securely stored and managed, tightly controlled (restricted), and auditable.
 
-A modern system requires access to a multitude of secrets: database credentials,
+A modern system requires access to a multitude of secrets, including database credentials,
 API keys for external services, credentials for service-oriented architecture
-communication, etc. Understanding who is accessing what secrets is already very
-difficult and platform-specific. Adding on key rolling, secure storage, and
+communication, etc. It can be difficult to understand who is accessing which secrets, especially since this can be platform-specific. Adding on key rolling, secure storage, and
 detailed audit logs is almost impossible without a custom solution. This is
 where Vault steps in.
 
-### How does Vault work?
+Vault validates and authorizes clients (users, machines, apps) before providing them access to secrets or stored sensitive data.
 
 ![How Vault Works](/img/how-vault-works.png)
 
-Vault validates and authorizes clients (users, machines, apps) before providing them access to secrets or stored sensitive data. The core Vault workflow consists of four stages:
+### How does Vault work?
+
+Vault works primarily with tokens and a token is associated to the client's policy. Each policy is path-based and policy rules contrains the actions and accessibility to the paths for each client. With Vault, you can create tokens manually and assign them to your clients, or the clients can log in and obtain a token. The illustration below displays Vault's core workflow.
 
 ![Vault Workflow](/img/vault-workflow-diagram1.png)
 
-* **Authenticate:** A client uses their identity to authenticate with Vault.
-* **Validation:** Vault validates the client against third-party trusted sources.
-* **Authorize**: A client is matched against the Vault security policy.  This policy is a set of rules defining which API endpoints a client has access to with its Vault token.
-* **Access**: Vault provides access to secrets, keys, and encryption capabilities based on policies associated with the client’s identity.
+ The core Vault workflow consists of four stages:
+
+* **Authenticate:** Authentication in Vault is the process by which a client supplies information that Vault uses to determine if they are who they say they are. Once the client is authenticated against an auth method, a token is generated and associated to a policy.
+* **Validation:** Vault validates the client against third-party trusted sources, such as Github, LDAP, AppRole, and more.
+* **Authorize**: A client is matched against the Vault security policy.  This policy is a set of rules defining which API endpoints a client has access to with its Vault token. Policies provide a declarative way to grant or forbid access to certain paths and operations in Vault.
+* **Access**: Vault grants access to secrets, keys, and encryption capabilities by issuing a token based on policies associated with the client’s identity. The client can then use their Vault token for future operations.
 
 ### Why Vault?
 
-Most enterprises today have credentials sprawled across their organizations. Passwords, API keys, and credentials are stored in plain text, app source code, config files, and other locations. Because these credentials live everywhere, the sprawl can make it difficult and daunting to really know who has access and authorization to what. Having credentials in plain text also increases the potential for malicious attacks, both by internal and external attackers. 
+Most enterprises today have credentials sprawled across their organizations. Passwords, API keys, and credentials are stored in plain text, app source code, config files, and other locations. Because these credentials live everywhere, the sprawl can make it difficult and daunting to really know who has access and authorization to what. Having credentials in plain text also increases the potential for malicious attacks, both by internal and external attackers.
 
-Vault was designed with these challenges in mind. It takes all of these credentials and centralizes them so that they are defined in one location, which reduces unwanted exposure to credentials. But Vault takes it a few steps further by making sure users, apps, and systems are authenticated and explicitly authorized to access resources, while also providing an audit trail that captures and preserves a history of clients' actions.
+Vault was designed with these challenges in mind. Vault takes all of these credentials and centralizes them so that they are defined in one location, which reduces unwanted exposure to credentials. But Vault takes it a few steps further by making sure users, apps, and systems are authenticated and explicitly authorized to access resources, while also providing an audit trail that captures and preserves a history of clients' actions.
 
 The key features of Vault are:
 
@@ -67,68 +70,13 @@ The key features of Vault are:
   Revocation assists in key rolling as well as locking down systems in the
   case of an intrusion.
 
--> **Tip:** Learn more about [Vault use cases](/docs/use-cases).
+-> **Tip**: Learn more about Vault [use cases](/docs/use-cases).
 
 ### What is HCP Vault?
 
-HashiCorp Cloud Platform (HCP) Vault is a hosted version of Vault, which is operated by HashiCorp to allow organizations to get up and running quickly. HCP Vault uses the same binary as self-hosted Vault, which means you will have a consistent user experience. You can use the same Vault clients to communicate with HCP Vault as you use to communicate with a self-hosted Vault.
+HashiCorp Cloud Platform (HCP) Vault is a hosted version of Vault, which is operated by HashiCorp to allow organizations to get up and running quickly. HCP Vault uses the same binary as self-hosted Vault, which means you will have a consistent user experience. You can use the same Vault clients to communicate with HCP Vault as you use to communicate with a self-hosted Vault. Refer to the [HCP Vault](https://cloud.hashicorp.com/docs/vault) documentation to learn more.
 
--> **Tip:** Learn more about [HCP Vault](https://cloud.hashicorp.com/docs/vault) or [get started](https://learn.hashicorp.com/collections/vault/cloud) by setting up a managed Vault cluster.
-
-### Why HCP Vault?
-
-Vault running on the HashiCorp Cloud Platform (HCP) enables users to secure, store, and tightly control access to tokens, passwords, certificates, and encryption keys within one unified cloud-based platform.
-
-The benefits of HCP Vault are:
-
-- **Reduce operational overhead:** Push-button deployment, fully managed
-  upgrades, and backups mean organizations can focus on adoption and integration
-  instead of operational overhead
-
-- **Increase security across clouds and machines:** Secure your infrastructure
-  across all your environments through a single interface and globally control
-  and restrict access to sensitive data and systems
-
-- **Control cost:** Reduce the number of systesm, licenses, and manual overhead
-  by centralizing secrets management with HCP Vault
-
-- **Day zero readiness:** Modern cloud security to quickly secure applications,
-  access, and data from day zero.
-
-- **Reliability:** HashiCorp has experience supporting thousands of commercial Vault
-  clusters and HCP Vault brings that expertise directly to users.
-
-- **Ease of use:** HCP Vault is built around making cloud security automation
-  simple. Get up and running instantly so that you can onboard applications and teams easily.
-
-### Feature parity
-
-The table below compares the features available on the self-managed Vault
-Enterprise and HCP Vault.
-
-| Features                                      | Self-managed | HCP Vault       |
-|-----------------------------------------------|:------------:|:---------------:|
-| All Open Source Features                      | ✔️            | ✔️               |
-| Namespaces                                    | ✔️            | ✔️               |
-| Performance Replication                       | ✔️            | ✔️               |
-| Paths Filter                                  | ✔️            | ✔️               |
-| Read Replica                                  | ✔️            |                 |
-| Disaster Recovery (DR) Replication            | ✔️            |                 |
-| Control Groups                                | ✔️            |                 |
-| Sentinel                                      | ✔️            |                 |
-| HSM Auto-unseal                               | ✔️            |                 |
-| FIPS 140-2 & Seal Wrap                        | ✔️            |                 |
-| KMIP Secrets Engine                           | ✔️            |                 |
-| Key Management Secrets Engine                 | ✔️            |                 |
-| Transform Secrets Engine                      | ✔️            |                 |
-| Automatic Minor Version Upgrade               |              | ✔️               |
-| Audit Logging by default                      |              | ✔️               |
-| Snapshots & Restore                           |              | ✔️               |
-
-~> **Note:** For the self-managed Vault Enterprise clusters, audit logging is a
-manual configuration. Similarly, if your self-managed Vault is running Vault
-with Integrated Storage, you can configure an automatic data snapshot. However, HCP Vault automates the audit logging process.
-
+> **Hands On:** Try the [Get started](https://learn.hashicorp.com/collections/vault/cloud) tutorial on HashiCorp Learn to set up a managed Vault cluster.
 
 ### Community
 
