Add missing key_ref parameter to gen root docs
Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -1212,6 +1212,10 @@ use the values set via `config/urls`.
   optionally specifies the name for this. The global ref `default` may not
   be used as a name.
 
+- `key_ref` `(string: "default")` - Specifies the key (either `default`, by
+  name, or by identifier) to use for generating this request. Only suitable
+  for `type=existing` requests.
+
 - `common_name` `(string: <required>)` - Specifies the requested CN for the
   certificate. If more than one `common_name` is desired, specify the
   alternative names in the `alt_names` list.
