--- a/website/content/docs/platform/mssql/installation.mdx
+++ b/website/content/docs/platform/mssql/installation.mdx
@@ -1,10 +1,13 @@
 ---
 layout: docs
-page_title: Install Vault EKM Provider
+page_title: Install the Vault EKM Provider
 description: Installation steps for the Vault EKM Provider for Microsoft SQL Server.
 ---
 
 # Installing the Vault EKM Provider
+
+This guide assumes you are installing the Vault EKM Provider for the first time.
+For upgrade instructions, see [upgrading](/docs/platform/mssql/upgrading).
 
 ## Prerequisites
 
@@ -30,9 +33,6 @@ The list of features should include "Key Management Transparent Data Encryption"
 The EKM provider requires AppRole auth and the Transit secret engine to be setup
 on the Vault server. The steps below can be used to configure Vault ready for the
 EKM provider to use it.
-
--> **Note:** The first release of the Vault EKM provider does not support custom
-mount paths or namespaces for the AppRole and Transit engines.
 
 -> **Note:** rsa-2048 is currently the only supported key type.
 
@@ -95,8 +95,9 @@ The remaining steps are all run on the database server.
 
 1. Download and run the latest Vault EKM provider installer from
   [releases.hashicorp.com](https://releases.hashicorp.com/vault-mssql-ekm-provider/)
-
 1. Enter your Vault server's address when prompted and complete the installer
+1. If you need to configure non-default namespace or mount paths for your AppRole and
+   Transit engines, see [configuration](/docs/platform/mssql/configuration).
 
 ### Configure the EKM provider using SQL
 
@@ -201,7 +202,7 @@ installation.
     ```sql
     SELECT * FROM sys.dm_database_encryption_keys;
 
-    SELECT (SELECT name FROM sys.databases WHERE database_id = k.database_id) as name, 
+    SELECT (SELECT name FROM sys.databases WHERE database_id = k.database_id) as name,
         encryption_state, key_algorithm, key_length,
         encryptor_type, encryption_state_desc, encryption_scan_state_desc FROM sys.dm_database_encryption_keys k;
 
