--- a/website/content/docs/secrets/transform/tokenization.mdx
+++ b/website/content/docs/secrets/transform/tokenization.mdx
@@ -27,8 +27,8 @@ of the distributed token, or may be recoverable in the export operation. See
 
 ### Convergence
 
-By default, tokenization produces a unique token for every encode operation.  
-This makes the resulting token fully independent of its plaintext and expiration.  
+By default, tokenization produces a unique token for every encode operation. 
+This makes the resulting token fully independent of its plaintext and expiration. 
 Sometimes, though, it may be beneficial if the tokenization of a plaintext/expiration
 pair tokenizes consistently to the same value.  For example if one wants to 
 do a statistical analysis of the tokens as they related to some other field
@@ -42,7 +42,9 @@ storage keeps only a single entry of that token.  Like the exportable mapping
 mode, convergence should only be enabled if needed.  Convergent tokenization
 has a small performance penalty in external stores and a larger one in the
 built in store due to the need to avoid duplicate entries and to update
-metadata when convergently encoding. 
+metadata when convergently encoding.  It is recommended that if one has some
+use cases that require convergence and some that do not, create two
+different tokenization transforms with convergence enabled on only one. 
 
 ### Token Lookup
 
