Fix sample response

--- a/website/content/api-docs/secret/transform.mdx
+++ b/website/content/api-docs/secret/transform.mdx
@@ -1468,7 +1468,9 @@ $ curl \
 ```json
 {
   "data": {
-    "tokenized": true
+    "tokens": [
+      "AHLdmFvTRknMBgrNSy6Ba7xJxG28KkZeHKqxGJ7e45G3V9UbcUr6gdv83ozwRRQwLfJgyHZvfa9rh7kU9xJXVdY"
+    ]
   }
 }
 ```
