--- a/website/content/api-docs/secret/transform.mdx
+++ b/website/content/api-docs/secret/transform.mdx
@@ -1380,7 +1380,7 @@ $ curl \
 
 This endpoint returns the token given a plaintext and optionally an
 expiration or range of expirations.  This operation is only supported
-of the transform is configured as 'convergent', or if the mapping
+if the transformation is configured as 'convergent', or if the mapping
 mode is exportable and the storage backend is external.  Tokens may be
 looked up with an explicit expiration, any expiration, or with range
 of acceptable expiration times. This endpoint is only valid for tokenization 
