--- a/website/content/api-docs/secret/transform.mdx
+++ b/website/content/api-docs/secret/transform.mdx
@@ -1382,7 +1382,7 @@ This endpoint returns the token given a plaintext and optionally an
 expiration or range of expirations.  This operation is only supported
 if the transformation is configured as 'convergent', or if the mapping
 mode is exportable and the storage backend is external.  Tokens may be
-looked up with an explicit expiration, any expiration, or with range
+looked up with an explicit expiration, an expiration value of "any", or with a range
 of acceptable expiration times. This endpoint is only valid for tokenization 
 transformations.
 
