--- a/website/content/api-docs/secret/transform.mdx
+++ b/website/content/api-docs/secret/transform.mdx
@@ -1408,6 +1408,7 @@ transformations.
 - `min_expiration` `(string: "")` - The minimum expiration time of the token,
   inclusive, as an RFC3339 formatted time and date. 
   `min_expiration` may not be used at the same time as `expiration`.
+  When provided, `max_expiration` must also be provided.
 
 - `max_expiration` `(string: "")` - The maximum expiration time of the token,
   inclusive, as an RFC3339 formatted time and date. 
