--- a/website/content/api-docs/secret/transform.mdx
+++ b/website/content/api-docs/secret/transform.mdx
@@ -1416,7 +1416,7 @@ transformations.
 
 - `transformation` `(string)` –
   Specifies the transformation within the role that should be used for this
-  decode operation. If a single transformation exists for role, this parameter
+  lookup operation. If a single transformation exists for role, this parameter
   may be skipped and will be inferred. If multiple transformations exist, one
   must be specified.
 
