--- a/website/content/api-docs/secret/transform.mdx
+++ b/website/content/api-docs/secret/transform.mdx
@@ -1424,7 +1424,7 @@ transformations.
   A user-supplied string that will be present in the `reference` field on the
   corresponding `batch_results` item in the response, to assist in understanding
   which result corresponds to a particular input. Only valid on batch requests
-  when using ‘batch_input’ below.
+  when using `batch_input` below.
 
 - `batch_input` `(array<object>: nil)` -
   Specifies a list of items to be decoded in a single batch. When this
