--- a/website/content/docs/secrets/transform/index.mdx
+++ b/website/content/docs/secrets/transform/index.mdx
@@ -282,7 +282,7 @@ possible, as it is resistant to more types of attack.
 
 #### Convergent Tokenization
 
-In addition, tokenization transforms may be configured *convergent*, meaning
+In addition, tokenization transformations may be configured as *convergent*, meaning
 that tokenizing a plaintext and expiration more than once results in the
 same token value.  Enabling convergence has performance and security 
 [considerations](transform/tokenization#convergence).
