--- a/website/content/docs/secrets/transform/tokenization.mdx
+++ b/website/content/docs/secrets/transform/tokenization.mdx
@@ -31,7 +31,7 @@ By default, tokenization produces a unique token for every encode operation.
 This makes the resulting token fully independent of its plaintext and expiration. 
 Sometimes, though, it may be beneficial if the tokenization of a plaintext/expiration
 pair tokenizes consistently to the same value.  For example if one wants to 
-do a statistical analysis of the tokens as they related to some other field
+do a statistical analysis of the tokens as they relate to some other field
 in a database (without decoding the token), or if one needed to tokenize
 in two different systems but be able relate the results.  In this case,
 one can create a tokenization transform that is *convergent*.  
