--- a/website/content/docs/secrets/transform/tokenization.mdx
+++ b/website/content/docs/secrets/transform/tokenization.mdx
@@ -34,7 +34,7 @@ pair tokenizes consistently to the same value.  For example if one wants to
 do a statistical analysis of the tokens as they relate to some other field
 in a database (without decoding the token), or if one needed to tokenize
 in two different systems but be able relate the results.  In this case,
-one can create a tokenization transform that is *convergent*.  
+one can create a tokenization transformation that is *convergent*.  
 
 When enabled at transform creation time, Vault alters the calculation so that
 encoding a plaintext and expiration tokenizes to the same value every time, and
