--- a/website/content/docs/secrets/transform/tokenization.mdx
+++ b/website/content/docs/secrets/transform/tokenization.mdx
@@ -43,7 +43,7 @@ mode, convergence should only be enabled if needed.  Convergent tokenization
 has a small performance penalty in external stores and a larger one in the
 built in store due to the need to avoid duplicate entries and to update
 metadata when convergently encoding.  It is recommended that if one has some
-use cases that require convergence and some that do not, create two
+use cases that require convergence and some that do not, one should create two
 different tokenization transforms with convergence enabled on only one. 
 
 ### Token Lookup
