--- a/website/content/docs/secrets/transform/tokenization.mdx
+++ b/website/content/docs/secrets/transform/tokenization.mdx
@@ -49,7 +49,7 @@ different tokenization transforms with convergence enabled on only one.
 ### Token Lookup
 
 Some use cases may want to lookup the value of a token given its plaintext.  Ordinarily
-this is contrary to the nature of Tokenization where we want to prevent the ability
+this is contrary to the nature of tokenization where we want to prevent the ability
 of an attacker to determine that a token corresponds to a plaintext value (a known
 plaintext attack).  But for use cases that require it, the 
 [token lookup](../../../api-docs/secret/transform#token-lookup)
