--- a/website/content/docs/secrets/transform/tokenization.mdx
+++ b/website/content/docs/secrets/transform/tokenization.mdx
@@ -54,7 +54,7 @@ of an attacker to determine that a token corresponds to a plaintext value (a kno
 plaintext attack).  But for use cases that require it, the 
 [token lookup](../../../api-docs/secret/transform#token-lookup)
 operation is supported, but only in some configurations of the tokenization
-transform.  Token lookup is supported when convergence is enabled, or
+transformation.  Token lookup is supported when convergence is enabled, or
 if the mapping mode is exportable *and* the storage backend is external.
 
 ## Performance Considerations
