--- a/website/content/api-docs/secret/transform.mdx
+++ b/website/content/api-docs/secret/transform.mdx
@@ -1428,7 +1428,7 @@ transformations.
 
 - `batch_input` `(array<object>: nil)` -
   Specifies a list of items to be decoded in a single batch. When this
-  parameter is set, the 'value', 'transformation', and 'reference' parameters are
+  parameter is set, the `value`, `transformation`, and `reference` parameters are
   ignored. Instead, the aforementioned parameters should be provided within
   each object in the list. In addition, batched requests can add the `reference`
   field described above.
