--- a/website/content/docs/secrets/transform/tokenization.mdx
+++ b/website/content/docs/secrets/transform/tokenization.mdx
@@ -36,7 +36,7 @@ in a database (without decoding the token), or if one needed to tokenize
 in two different systems but be able relate the results.  In this case,
 one can create a tokenization transformation that is *convergent*.  
 
-When enabled at transform creation time, Vault alters the calculation so that
+When enabled at transformation creation time, Vault alters the calculation so that
 encoding a plaintext and expiration tokenizes to the same value every time, and
 storage keeps only a single entry of that token.  Like the exportable mapping
 mode, convergence should only be enabled if needed.  Convergent tokenization
