--- a/website/content/api-docs/secret/transform.mdx
+++ b/website/content/api-docs/secret/transform.mdx
@@ -1413,6 +1413,7 @@ transformations.
 - `max_expiration` `(string: "")` - The maximum expiration time of the token,
   inclusive, as an RFC3339 formatted time and date. 
   `max_expiration` may not be used at the same time as `expiration`.
+  When provided, `min_expiration` must also be provided.
 
 - `transformation` `(string)` –
   Specifies the transformation within the role that should be used for this
