update awkward text

--- a/website/content/api-docs/secret/transform.mdx
+++ b/website/content/api-docs/secret/transform.mdx
@@ -1317,7 +1317,7 @@ This endpoint is only valid for tokenization transformations.
   of the URL.
 
 - `value` `(string: <required>)` –
-  Specifies the token to test for whether it has a valid tokenization.
+  Specifies the token to plaintext for which to check whether it has been tokenized.
 
 - `transformation` `(string)` –
   Specifies the transformation within the role that should be used for this
