--- a/website/content/docs/secrets/transform/tokenization.mdx
+++ b/website/content/docs/secrets/transform/tokenization.mdx
@@ -25,6 +25,38 @@ Depending on the mapping mode, the plaintext may be decoded only with possession
 of the distributed token, or may be recoverable in the export operation. See
 [Security Considerations](#security-considerations) for more.
 
+### Convergence
+
+By default, tokenization produces a unique token for every encode operation. 
+This makes the resulting token fully independent of its plaintext and expiration. 
+Sometimes, though, it may be beneficial if the tokenization of a plaintext/expiration
+pair tokenizes consistently to the same value.  For example if one wants to 
+do a statistical analysis of the tokens as they relate to some other field
+in a database (without decoding the token), or if one needed to tokenize
+in two different systems but be able relate the results.  In this case,
+one can create a tokenization transformation that is *convergent*.  
+
+When enabled at transformation creation time, Vault alters the calculation so that
+encoding a plaintext and expiration tokenizes to the same value every time, and
+storage keeps only a single entry of that token.  Like the exportable mapping
+mode, convergence should only be enabled if needed.  Convergent tokenization
+has a small performance penalty in external stores and a larger one in the
+built in store due to the need to avoid duplicate entries and to update
+metadata when convergently encoding.  It is recommended that if one has some
+use cases that require convergence and some that do not, one should create two
+different tokenization transforms with convergence enabled on only one. 
+
+### Token Lookup
+
+Some use cases may want to lookup the value of a token given its plaintext.  Ordinarily
+this is contrary to the nature of tokenization where we want to prevent the ability
+of an attacker to determine that a token corresponds to a plaintext value (a known
+plaintext attack).  But for use cases that require it, the 
+[token lookup](../../../api-docs/secret/transform#token-lookup)
+operation is supported, but only in some configurations of the tokenization
+transformation.  Token lookup is supported when convergence is enabled, or
+if the mapping mode is exportable *and* the storage backend is external.
+
 ## Performance Considerations
 
 ### Builtin (Internal) Store
