Wording changes per Scott
Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/docs/enterprise/entropy-augmentation.mdx
+++ b/website/content/docs/enterprise/entropy-augmentation.mdx
@@ -10,7 +10,7 @@ description: |-
 
 -> **Note**: This feature requires [Vault Enterprise Plus](https://www.hashicorp.com/products/vault/).
 
-~> **Warning** This feature does not work with FIPS 140-2 Inside variants of Vault.
+~> **Warning** This feature is not available with FIPS 140-2 Inside variants of Vault.
 
 Vault Enterprise features a mechanism to sample entropy (or randomness for
 cryptographic operations) from external cryptographic modules via the [seals](/docs/configuration/seal)
