--- a/website/content/docs/configuration/entropy-augmentation.mdx
+++ b/website/content/docs/configuration/entropy-augmentation.mdx
@@ -19,7 +19,7 @@ block in Vault's configuration file.
 
 A valid Vault Enterprise license is required for Entropy Augmentation.
 
-~> **Warning** This feature does not work with FIPS 140-2 Inside variants of Vault.
+~> **Warning** This feature is not available with FIPS 140-2 Inside variants of Vault.
 
 Additionally, the following software packages and enterprise modules are required for sourcing entropy
 via the [PKCS11 seal](/docs/configuration/seal/pkcs11):
