--- a/website/content/api-docs/auth/aws.mdx
+++ b/website/content/api-docs/auth/aws.mdx
@@ -284,7 +284,7 @@ $ curl \
 ## Create Certificate Configuration
 
 Registers an AWS public key to be used to verify the instance identity
-documents. Indicate the type of the public key using the "type" parameter.
+documents. Indicate the type of the public key using the `type` parameter.
 Vault has the default
 [documented](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instance-identity-documents.html)
 set of AWS certificates built-in.
