--- a/website/content/api-docs/secret/consul.mdx
+++ b/website/content/api-docs/secret/consul.mdx
@@ -82,7 +82,7 @@ Consul version.
 
 - `partition` `(string: "")` - Specifies the Consul admin partition the token will be
   generated within. The partition must exist, and the Consul policies or roles assigned to the
-  Vault role must also exist inside the given partition. If not provided, the partition `default`
+  Vault role must also exist inside the given partition. If it's not provided, the partition `default`
   is used.
 
 To create a client token within a particular Consul admin partition:
