--- a/website/content/api-docs/secret/consul.mdx
+++ b/website/content/api-docs/secret/consul.mdx
@@ -80,7 +80,7 @@ Consul version.
 
 ### Parameters for Consul versions 1.11 and above
 
-- `partition` `(string: "")` - Specifies the Consul admin partition the token will be
+- `partition` `(string: "")` - Specifies the Consul admin partition in which the token is generated within.
   generated within. The partition must exist, and the Consul policies or roles assigned to the
   Vault role must also exist inside the given partition. If it's not provided, the partition `default`
   is used.
