--- a/website/content/api-docs/secret/consul.mdx
+++ b/website/content/api-docs/secret/consul.mdx
@@ -96,7 +96,7 @@ To create a client token within a particular Consul admin partition:
 ### Parameters for Consul versions 1.8 and above
 
 - `consul_namespace` `(string: "")` - Specifies the Consul admin partition in which the token is generated within.
-  will be generated within. The namespace must exist, and the Consul policies or roles assigned
+The namespace must exist, and the Consul policies or roles assigned
   to the Vault role must also exist inside the given Consul namespace. If not provided, the 
   namespace `default` is used.
 
